# myHelloAgent

./: .env.example  .gitignore  Memory.py  PROJECT_STRUCTURE.md  Plan_and_solve.py  README.md  ReActAgent.py  Reflection.py  myHelloAgentsLLM.py  pyproject.toml  tools.py
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-22-claude-style-ui.md  2026-03-22-conversation-persistence.md  2026-03-22-web-chat.md
docs/superpowers/specs/: 2026-03-22-claude-style-ui-design.md  2026-03-22-web-chat-design.md
src/backend/: database.py  main.py
src/backend/models/: db_models.py  schemas.py
src/backend/routers/: chat.py  conversations.py
src/backend/services/: agent_service.py
src/core/: __init__.py  llm_client.py  memory.py  plan_agent.py  react_agent.py  reflection_agent.py  tools.py
src/frontend/: index.html  package.json  vite.config.js
src/frontend/src/: App.vue  api.js  main.js  style.css
src/frontend/src/components/: InputArea.vue  MessageList.vue  Sidebar.vue  TopBar.vue
src/frontend/src/utils/: markdown.js
